# dev-rag

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: hookify.rag-first-reminder-task.local.md  hookify.rag-first-reminder.local.md
.claude/commands/: rag-index.md  rag-pr.md  rag-search.md
.claude/hooks/: rag_first_gate.py
.claude/skills/rag-first/: SKILL.md
.claude/skills/rag-index/: SKILL.md
.claude/skills/rag-pr/: SKILL.md
.claude/skills/rag-search/: SKILL.md
devrag/: cli.py  config.py  eval.py  mcp_server.py  types.py
devrag/ingest/: code_indexer.py  doc_indexer.py  embedder.py  issue_indexer.py  jira_indexer.py  pr_indexer.py  session_indexer.py  slite_indexer.py  sparse_encoder.py
devrag/retrieve/: hybrid_search.py  query_router.py  reranker.py
devrag/stores/: base.py  chroma_store.py  factory.py  metadata_db.py  qdrant_store.py
devrag/utils/: formatters.py  git.py  github.py  jira_client.py  slite_client.py
docs/: rag-dev-workflow.md
docs/superpowers/plans/: 2026-04-02-devrag-phase1.md  2026-04-02-devrag-phase2.md  (+2 more)
tests/: conftest.py  test_chroma_store.py  test_cli.py  test_code_indexer.py  test_config.py  test_doc_indexer.py  test_embedder.py  test_eval.py  test_formatters.py  test_git.py  test_github.py  test_hybrid_search.py  test_integration.py  test_issue_indexer.py  test_jira_indexer.py  test_metadata_db.py  test_observability.py  test_pr_indexer.py  test_qdrant_store.py  test_query_router.py  test_reranker.py  test_session_indexer.py  test_slite_indexer.py  test_sparse_encoder.py  test_store_factory.py
(+4 files in other folders)
