[project]
name = "devrag"
version = "0.1.0"
description = "Local RAG system for developer teams"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0",
    "gitpython>=3.1.0",
    "httpx>=0.27.0",
    "opentelemetry-proto>=1.27.0",
    "pyyaml>=6.0",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-language-pack>=0.21.0",
    "typer>=0.12.0",
]

[project.scripts]
devrag = "devrag.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
